--- a/VirtualPostIt/res/layout/activity_note_edit.xml
+++ b/VirtualPostIt/res/layout/activity_note_edit.xml
@@ -4,35 +4,45 @@
     android:layout_height="fill_parent" >
 
     <TextView
+        android:id="@+id/lblTimestamp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" />
+
+    <TextView
         android:id="@+id/viewNote"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/lblTimestamp"
         tools:context=".NoteEditActivity" />
-    
-     <Button
-        android:id="@+id/btnEdit"
-        android:layout_width="125px"
+
+    <RelativeLayout
+        android:id="@+id/InnerRelativeLayout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Edit"
-        android:layout_below="@+id/viewNote"
-        android:layout_alignLeft="@+id/viewNote"
-        />
-     <Button
-        android:id="@+id/btnDelete"
-        android:layout_width="125px"
-        android:layout_height="wrap_content"
-        android:text="Delete"
-        android:layout_below="@+id/viewNote"
-        android:layout_centerHorizontal="true"
-        />
-      <Button
-        android:id="@+id/btnCancel"
-        android:layout_width="125px"
-        android:layout_height="wrap_content"
-        android:text="Cancel"
-        android:layout_below="@+id/viewNote"
-        android:layout_alignRight="@+id/viewNote"
-        />
+        android:layout_alignParentBottom="true" >
+
+        <Button
+            android:id="@+id/btnEdit"
+            android:layout_width="125px"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:text="Edit" />
+
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="125px"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"           
+            android:text="Delete" />
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="125px"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="Cancel" />
+    </RelativeLayout>
+
 </RelativeLayout>
