--- a/VirtualPostIt/res/layout/activity_note.xml
+++ b/VirtualPostIt/res/layout/activity_note.xml
@@ -1,49 +1,53 @@
-<RelativeLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/RLayout"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+    android:layout_height="fill_parent" >
+  
     <TextView
         android:id="@+id/lblNote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Note"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        />
+        android:layout_alignParentTop="true"
+        android:text="Edit Note" />
+
     <EditText
         android:id="@+id/txtNote"
         android:layout_width="fill_parent"
         android:layout_height="170px"
-        android:textSize="18sp"
         android:layout_alignLeft="@+id/lblNote"
         android:layout_below="@+id/lblNote"
         android:layout_centerHorizontal="true"
-        />
+        android:textSize="18sp" />
+
+    <EditText
+        android:id="@+id/txtAddress"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/txtNote"
+        android:layout_below="@+id/txtNote"
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/btnAddress"
+        android:layout_width="125px"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/txtNote"
+        android:layout_below="@+id/txtNote"
+        android:text="Add place" />
     <Button
         android:id="@+id/btnSave"
         android:layout_width="125px"
         android:layout_height="wrap_content"
-        android:text="Save"
-        android:layout_below="@+id/txtNote"
-        android:layout_alignLeft="@+id/txtNote"
-        />
-     <Button
-        android:id="@+id/btnCoordinates"
-        android:layout_width="125px"
-        android:layout_height="wrap_content"
-        android:text="Add place"
-        android:layout_below="@+id/txtNote"
-        android:layout_centerHorizontal="true"
-        
-        />
+        android:layout_below="@+id/txtAddress"
+        android:text="Save" />
+
     <Button
         android:id="@+id/btnCancel"
-        android:layout_width="124px"
+        android:layout_width="125px"
         android:layout_height="wrap_content"
-        android:text="Cancel"
-        android:layout_below="@+id/txtNote"
-        android:layout_alignRight="@+id/txtNote"
-        />
+        android:layout_alignRight="@+id/btnAddress"
+        android:layout_below="@+id/btnAddress"
+        android:text="Cancel" />
+
 </RelativeLayout>
