--- a/VirtualPostIt/res/layout/activity_note_edit.xml
+++ b/VirtualPostIt/res/layout/activity_note_edit.xml
@@ -1,55 +1,53 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/RLayout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
-
+  
     <TextView
-        android:id="@+id/lblTimestamp"
+        android:id="@+id/lblNote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:text="Edit Note" />
 
-    <TextView
-        android:id="@+id/lblAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/lblTimestamp"
-        android:clickable="true" />
+    <EditText
+        android:id="@+id/txtNote"
+        android:layout_width="fill_parent"
+        android:layout_height="170px"
+        android:layout_alignLeft="@+id/lblNote"
+        android:layout_below="@+id/lblNote"
+        android:layout_centerHorizontal="true"
+        android:textSize="18sp" />
 
-    <TextView
-        android:id="@+id/viewNote"
+    <EditText
+        android:id="@+id/txtAddress"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/lblAddress"
-        tools:context=".NoteEditActivity" />
+        android:layout_alignLeft="@+id/txtNote"
+        android:layout_below="@+id/txtNote"
+        android:textSize="18sp" />
 
-    <RelativeLayout
-        android:id="@+id/InnerRelativeLayout"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btnAddress"
+        android:layout_width="125px"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" >
+        android:layout_alignRight="@+id/txtNote"
+        android:layout_below="@+id/txtNote"
+        android:text="Add place" />
+    <Button
+        android:id="@+id/btnSave"
+        android:layout_width="125px"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txtAddress"
+        android:text="Save" />
 
-        <Button
-            android:id="@+id/btnEdit"
-            android:layout_width="125px"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:text="Edit" />
-
-        <Button
-            android:id="@+id/btnDelete"
-            android:layout_width="125px"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="Delete" />
-
-        <Button
-            android:id="@+id/btnCancel"
-            android:layout_width="125px"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="Cancel" />
-    </RelativeLayout>
+    <Button
+        android:id="@+id/btnCancel"
+        android:layout_width="125px"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/btnAddress"
+        android:layout_below="@+id/btnAddress"
+        android:text="Cancel" />
 
 </RelativeLayout>
