--- a/VirtualPostIt/res/layout/list_row.xml
+++ b/VirtualPostIt/res/layout/list_row.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:padding="5dp" >
+
     <TextView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/rowTextView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:textSize="16sp" >
-    </TextView>
+        android:textSize="16sp" />
+
+    <ImageView
+        android:id="@+id/pushpin"
+        android:layout_width="50px"
+        android:layout_height="50px"
+        android:gravity="right"
+        android:paddingRight="10dp" />
+
+</LinearLayout>
