--- a/VirtualPostIt/res/menu/activity_post_it.xml
+++ b/VirtualPostIt/res/menu/activity_post_it.xml
@@ -1,8 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_settings"
+        android:id="@+id/menu_map_view"
         android:orderInCategory="100"
-        android:title="@string/menu_settings"/>
+        android:title="Show notes around me"/>
+    <item
+        android:id="@+id/menu_quit"
+        android:orderInCategory="200"
+        android:title="Quit"/>
 
 </menu>
