--- a/VirtualPostIt/res/layout/activity_note_view.xml
+++ b/VirtualPostIt/res/layout/activity_note_view.xml
@@ -37,7 +37,7 @@
 
     <RelativeLayout
         android:id="@+id/InnerRelativeLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" >
 
